# speedy-gonzalez

./: .pre-commit-config.yaml  .pre-commit-config.yml  README.md  pyproject.toml
src/speedy_gonzalez/: __init__.py  main.py
