[project]
name = "speedy-gonzalez"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Timothy Elems", email = "85181892+TimothyElems@users.noreply.github.com" }
]
dependencies = [
    "ruff>=0.4.7",
    "tk>=0.1.0",
    "pre-commit>=3.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/speedy_gonzalez"]
